--- a/donate.html
+++ b/donate.html
@@ -2,14 +2,16 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Donate - DonateNow</title>
+  <title>Donate - KindNest</title>
   <link rel="stylesheet" href="css/style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+
+  <!-- 🔷 Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">DonateNow</a>
+      <a class="navbar-brand" href="#">KindNest</a>
       <ul class="navbar-nav ms-auto">
         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="cause.html">Causes</a></li>
@@ -20,13 +22,25 @@
     </div>
   </nav>
 
+  <!-- 💚 Donate Form -->
   <div class="container py-5">
-    <h2>Make a Donation</h2>
-    <form>
-      <input type="text" class="form-control mb-2" placeholder="Your Name" required>
-      <input type="number" class="form-control mb-2" placeholder="Donation Amount (₹)" required>
-      <button class="btn btn-success">Donate Now</button>
-    </form>
+    <h2 class="mb-4 text-center">Make a Donation</h2>
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <form>
+          <div class="mb-3">
+            <label for="donorName" class="form-label">Your Name</label>
+            <input type="text" id="donorName" class="form-control" placeholder="Enter your full name" required>
+          </div>
+          <div class="mb-3">
+            <label for="donationAmount" class="form-label">Donation Amount (₹)</label>
+            <input type="number" id="donationAmount" class="form-control" placeholder="e.g. 500" required>
+          </div>
+          <button type="submit" class="btn btn-success w-100">Donate Now</button>
+        </form>
+      </div>
+    </div>
   </div>
+
 </body>
 </html>
