--- a/donate.html
+++ b/donate.html
@@ -3,13 +3,50 @@
 <head>
   <meta charset="UTF-8">
   <title>Donate - KindNest</title>
-  <link rel="stylesheet" href="css/style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body {
+      background-color: #fdf6f0;
+      font-family: 'Segoe UI', sans-serif;
+      color: #4a4a4a;
+    }
+    .navbar {
+      background-color: #c4e3dc;
+    }
+    .navbar-brand, .nav-link {
+      color: #2e4a47 !important;
+      font-weight: 500;
+    }
+    .nav-link.active {
+      text-decoration: underline;
+    }
+    h2 {
+      color: #495867;
+    }
+    .form-control {
+      border-radius: 8px;
+      border: 1px solid #dee2e6;
+      background-color: #fffefc;
+    }
+    .btn-success {
+      background-color: #a5c9ca;
+      border: none;
+      font-weight: 500;
+    }
+    .btn-success:hover {
+      background-color: #8bbdbf;
+    }
+    .card {
+      border: none;
+      box-shadow: 0 4px 12px rgba(173, 216, 230, 0.2);
+      border-radius: 15px;
+    }
+  </style>
 </head>
 <body>
 
-  <!-- 🔷 Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <!-- 🌿 Navbar -->
+  <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">KindNest</a>
       <ul class="navbar-nav ms-auto">
@@ -27,17 +64,19 @@
     <h2 class="mb-4 text-center">Make a Donation</h2>
     <div class="row justify-content-center">
       <div class="col-md-6">
-        <form>
-          <div class="mb-3">
-            <label for="donorName" class="form-label">Your Name</label>
-            <input type="text" id="donorName" class="form-control" placeholder="Enter your full name" required>
-          </div>
-          <div class="mb-3">
-            <label for="donationAmount" class="form-label">Donation Amount (₹)</label>
-            <input type="number" id="donationAmount" class="form-control" placeholder="e.g. 500" required>
-          </div>
-          <button type="submit" class="btn btn-success w-100">Donate Now</button>
-        </form>
+        <div class="card p-4">
+          <form>
+            <div class="mb-3">
+              <label for="donorName" class="form-label">Your Name</label>
+              <input type="text" id="donorName" class="form-control" placeholder="Enter your full name" required>
+            </div>
+            <div class="mb-3">
+              <label for="donationAmount" class="form-label">Donation Amount (₹)</label>
+              <input type="number" id="donationAmount" class="form-control" placeholder="e.g. 500" required>
+            </div>
+            <button type="submit" class="btn btn-success w-100">Donate Now</button>
+          </form>
+        </div>
       </div>
     </div>
   </div>
