--- a/dashboard.html
+++ b/dashboard.html
@@ -2,14 +2,45 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>User Dashboard</title>
-  <link rel="stylesheet" href="css/style.css">
+  <title>User Dashboard - KindNest</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body {
+      background-color: #fdf6f0;
+      font-family: 'Segoe UI', sans-serif;
+      color: #4a4a4a;
+    }
+    .navbar {
+      background-color: #c4e3dc;
+    }
+    .navbar-brand, .nav-link {
+      color: #2e4a47 !important;
+      font-weight: 500;
+    }
+    .nav-link.active {
+      text-decoration: underline;
+    }
+    h2 {
+      color: #495867;
+    }
+    .list-group-item {
+      background-color: #ffffff;
+      border: 1px solid #e5e5e5;
+      border-radius: 8px;
+      margin-bottom: 10px;
+      box-shadow: 0 2px 6px rgba(173, 216, 230, 0.15);
+    }
+    .list-group-item:last-child {
+      margin-bottom: 0;
+    }
+  </style>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+
+  <!-- 🌿 Navbar -->
+  <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">DonateNow</a>
+      <a class="navbar-brand" href="#">KindNest</a>
       <ul class="navbar-nav ms-auto">
         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="cause.html">Cause</a></li>
@@ -20,12 +51,14 @@
     </div>
   </nav>
 
+  <!-- 📋 Dashboard Content -->
   <div class="container py-5">
-    <h2>My Donations</h2>
+    <h2 class="text-center mb-4">My Donations</h2>
     <ul class="list-group">
       <li class="list-group-item">₹500 - School Supplies - 01 Jul 2025</li>
       <li class="list-group-item">₹1000 - Food Drive - 15 Jun 2025</li>
     </ul>
   </div>
+
 </body>
 </html>
