--- a/cause.html
+++ b/cause.html
@@ -2,14 +2,53 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Cause Detail</title>
-  <link rel="stylesheet" href="css/style.css">
+  <title>Cause Detail - KindNest</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body {
+      background-color: #fdf6f0;
+      font-family: 'Segoe UI', sans-serif;
+      color: #4a4a4a;
+    }
+    .navbar {
+      background-color: #c4e3dc;
+    }
+    .navbar-brand, .nav-link {
+      color: #2e4a47 !important;
+      font-weight: 500;
+    }
+    .nav-link.active {
+      text-decoration: underline;
+    }
+    h2 {
+      color: #495867;
+    }
+    .progress {
+      height: 25px;
+      border-radius: 10px;
+      background-color: #e9ecef;
+      box-shadow: inset 0 1px 3px rgba(0,0,0,0.1);
+    }
+    .progress-bar {
+      background-color: #a5c9ca;
+      font-weight: 500;
+    }
+    .btn-primary {
+      background-color: #a5c9ca;
+      border: none;
+      font-weight: 500;
+    }
+    .btn-primary:hover {
+      background-color: #8bbdbf;
+    }
+  </style>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+
+  <!-- 🌿 Navbar -->
+  <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">DonateNow</a>
+      <a class="navbar-brand" href="#">KindNest</a>
       <ul class="navbar-nav ms-auto">
         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
         <li class="nav-item"><a class="nav-link active" href="#">Cause</a></li>
@@ -20,13 +59,17 @@
     </div>
   </nav>
 
+  <!-- 📚 Cause Detail -->
   <div class="container py-5">
-    <h2>School Supplies for Kids</h2>
-    <p>Help underprivileged students receive school bags, books, and uniforms.</p>
-    <div class="progress my-3">
+    <h2 class="mb-3">School Supplies for Kids</h2>
+    <p class="mb-4">Help underprivileged students receive school bags, books, and uniforms. Your support empowers their education journey.</p>
+    
+    <div class="progress mb-4">
       <div class="progress-bar" style="width: 60%;">₹6,000 / ₹10,000</div>
     </div>
+    
     <a href="donate.html" class="btn btn-primary">Donate Now</a>
   </div>
+
 </body>
 </html>
