--- a/admin.html
+++ b/admin.html
@@ -2,14 +2,48 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Admin Panel</title>
-  <link rel="stylesheet" href="css/style.css">
+  <title>Admin Panel - KindNest</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body {
+      background-color: #fdf6f0;
+      font-family: 'Segoe UI', sans-serif;
+      color: #4a4a4a;
+    }
+    .navbar {
+      background-color: #c4e3dc;
+    }
+    .navbar-brand, .nav-link {
+      color: #2e4a47 !important;
+      font-weight: 500;
+    }
+    .nav-link.active {
+      text-decoration: underline;
+    }
+    h2 {
+      color: #495867;
+    }
+    .table {
+      background-color: #fff;
+      border-radius: 12px;
+      overflow: hidden;
+      box-shadow: 0 4px 12px rgba(173, 216, 230, 0.2);
+    }
+    th {
+      background-color: #a5c9ca;
+      color: #2e4a47;
+    }
+    td {
+      background-color: #ffffff;
+    }
+  </style>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+
+  <!-- 🌿 Navbar -->
+  <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">DonateNow</a>
+      <a class="navbar-brand" href="#">KindNest</a>
       <ul class="navbar-nav ms-auto">
         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="cause.html">Cause</a></li>
@@ -20,17 +54,31 @@
     </div>
   </nav>
 
+  <!-- 🛠 Admin Content -->
   <div class="container py-5">
-    <h2>Admin Panel</h2>
-    <table class="table table-bordered">
+    <h2 class="mb-4 text-center">Admin Panel</h2>
+    <table class="table table-bordered text-center">
       <thead>
-        <tr><th>Cause</th><th>Raised</th><th>Goal</th></tr>
+        <tr>
+          <th>Cause</th>
+          <th>Raised</th>
+          <th>Goal</th>
+        </tr>
       </thead>
       <tbody>
-        <tr><td>School Supplies</td><td>₹6,000</td><td>₹10,000</td></tr>
-        <tr><td>Food Drive</td><td>₹8,000</td><td>₹8,000</td></tr>
+        <tr>
+          <td>School Supplies</td>
+          <td>₹6,000</td>
+          <td>₹10,000</td>
+        </tr>
+        <tr>
+          <td>Food Drive</td>
+          <td>₹8,000</td>
+          <td>₹8,000</td>
+        </tr>
       </tbody>
     </table>
   </div>
+
 </body>
 </html>
