--- a/index.html
+++ b/index.html
@@ -7,35 +7,44 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
-      background-color: #fdf6f0;
+      background: linear-gradient(135deg, #ffe4ec, #e0f7fa);
       font-family: 'Segoe UI', sans-serif;
-      color: #4a4a4a;
+      color: #222;
     }
     .navbar {
-      background-color: #c4e3dc;
+      background: linear-gradient(to right, #fbc2eb, #a6c1ee);
     }
     .navbar-brand, .nav-link {
-      color: #2e4a47 !important;
+      color: #222 !important;
       font-weight: 500;
     }
     .nav-link.active {
       text-decoration: underline;
     }
     h2 {
-      color: #495867;
+      color: #333;
     }
     .card {
       border: none;
-      box-shadow: 0 3px 10px rgba(173, 216, 230, 0.2);
-      border-radius: 12px;
-      background-color: #ffffff;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      border-radius: 15px;
+      background: linear-gradient(145deg, #ffffff, #f9f9f9);
+      transition: transform 0.3s ease;
+    }
+    .card:hover {
+      transform: scale(1.03);
     }
     .btn-primary {
-      background-color: #a5c9ca;
+      background: #cdb4db;
       border: none;
+      color: #000;
     }
     .btn-primary:hover {
-      background-color: #8bbdbf;
+      background: #b392d2;
+    }
+    .lead {
+      font-size: 1.2rem;
+      color: #444;
     }
   </style>
 </head>
