--- a/donate.html
+++ b/donate.html
@@ -17,7 +17,94 @@
       color: #2e4a47 !important;
       font-weight: 500;
     }
+    .nav-link.active {<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>Donate - KindNest</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body {
+      background: linear-gradient(135deg, #ffe4ec, #e0f7fa);
+      font-family: 'Segoe UI', sans-serif;
+      color: #222;
+    }
+    .navbar {
+      background: linear-gradient(to right, #fbc2eb, #a6c1ee);
+    }
+    .navbar-brand, .nav-link {
+      color: #222 !important;
+      font-weight: 500;
+    }
     .nav-link.active {
+      text-decoration: underline;
+    }
+    h2 {
+      color: #333;
+    }
+    .form-control {
+      border-radius: 8px;
+      border: 1px solid #dee2e6;
+      background-color: #fffefc;
+    }
+    .btn-success {
+      background-color: #cdb4db;
+      border: none;
+      color: #000;
+      font-weight: 500;
+    }
+    .btn-success:hover {
+      background-color: #b392d2;
+    }
+    .card {
+      border: none;
+      box-shadow: 0 4px 12px rgba(173, 216, 230, 0.2);
+      border-radius: 15px;
+      background: linear-gradient(145deg, #ffffff, #f9f9f9);
+    }
+  </style>
+</head>
+<body>
+
+  <!-- 🌿 Navbar -->
+  <nav class="navbar navbar-expand-lg">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">KindNest</a>
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="cause.html">Causes</a></li>
+        <li class="nav-item"><a class="nav-link active" href="#">Donate</a></li>
+        <li class="nav-item"><a class="nav-link" href="dashboard.html">Dashboard</a></li>
+        <li class="nav-item"><a class="nav-link" href="admin.html">Admin</a></li>
+      </ul>
+    </div>
+  </nav>
+
+  <!-- 💚 Donate Form -->
+  <div class="container py-5">
+    <h2 class="mb-4 text-center">Make a Donation</h2>
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <div class="card p-4">
+          <form>
+            <div class="mb-3">
+              <label for="donorName" class="form-label">Your Name</label>
+              <input type="text" id="donorName" class="form-control" placeholder="Enter your full name" required>
+            </div>
+            <div class="mb-3">
+              <label for="donationAmount" class="form-label">Donation Amount (₹)</label>
+              <input type="number" id="donationAmount" class="form-control" placeholder="e.g. 500" required>
+            </div>
+            <button type="submit" class="btn btn-success w-100">Donate Now</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</body>
+</html>
+
       text-decoration: underline;
     }
     h2 {
