--- a/dashboard.html
+++ b/dashboard.html
@@ -6,22 +6,22 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
-      background-color: #fdf6f0;
+      background: linear-gradient(135deg, #ffe4ec, #e0f7fa);
       font-family: 'Segoe UI', sans-serif;
-      color: #4a4a4a;
+      color: #222;
     }
     .navbar {
-      background-color: #c4e3dc;
+      background: linear-gradient(to right, #fbc2eb, #a6c1ee);
     }
     .navbar-brand, .nav-link {
-      color: #2e4a47 !important;
+      color: #222 !important;
       font-weight: 500;
     }
     .nav-link.active {
       text-decoration: underline;
     }
     h2 {
-      color: #495867;
+      color: #333;
     }
     .list-group-item {
       background-color: #ffffff;
@@ -29,6 +29,7 @@
       border-radius: 8px;
       margin-bottom: 10px;
       box-shadow: 0 2px 6px rgba(173, 216, 230, 0.15);
+      color: #333;
     }
     .list-group-item:last-child {
       margin-bottom: 0;
