--- a/cause.html
+++ b/cause.html
@@ -6,22 +6,22 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
-      background-color: #fdf6f0;
+      background: linear-gradient(135deg, #ffe4ec, #e0f7fa);
       font-family: 'Segoe UI', sans-serif;
-      color: #4a4a4a;
+      color: #222;
     }
     .navbar {
-      background-color: #c4e3dc;
+      background: linear-gradient(to right, #fbc2eb, #a6c1ee);
     }
     .navbar-brand, .nav-link {
-      color: #2e4a47 !important;
+      color: #222 !important;
       font-weight: 500;
     }
     .nav-link.active {
       text-decoration: underline;
     }
     h2 {
-      color: #495867;
+      color: #333;
     }
     .progress {
       height: 25px;
@@ -32,11 +32,13 @@
     .progress-bar {
       background-color: #a5c9ca;
       font-weight: 500;
+      color: #222;
     }
     .btn-primary {
       background-color: #a5c9ca;
       border: none;
       font-weight: 500;
+      color: #222;
     }
     .btn-primary:hover {
       background-color: #8bbdbf;
