--- a/admin.html
+++ b/admin.html
@@ -76,6 +76,11 @@
           <td>₹8,000</td>
           <td>₹8,000</td>
         </tr>
+        <tr>
+          <td>Medical Aid</td>
+          <td>₹4,500</td>
+          <td>₹12,000</td>
+        </tr>
       </tbody>
     </table>
   </div>
