--- a/cause.html
+++ b/cause.html
@@ -23,6 +23,13 @@
     h2 {
       color: #333;
     }
+    .cause-box {
+      background: #ffffff;
+      border-radius: 12px;
+      padding: 20px;
+      margin-bottom: 30px;
+      box-shadow: 0 4px 12px rgba(173, 216, 230, 0.2);
+    }
     .progress {
       height: 25px;
       border-radius: 10px;
@@ -61,16 +68,36 @@
     </div>
   </nav>
 
-  <!-- 📚 Cause Detail -->
+  <!-- 📚 Cause Details -->
   <div class="container py-5">
-    <h2 class="mb-3">School Supplies for Kids</h2>
-    <p class="mb-4">Help underprivileged students receive school bags, books, and uniforms. Your support empowers their education journey.</p>
     
-    <div class="progress mb-4">
-      <div class="progress-bar" style="width: 60%;">₹6,000 / ₹10,000</div>
+    <div class="cause-box">
+      <h2>School Supplies for Kids</h2>
+      <p>Help underprivileged students receive school bags, books, and uniforms. Your support empowers their education journey.</p>
+      <div class="progress mb-3">
+        <div class="progress-bar" style="width: 60%;">₹6,000 / ₹10,000</div>
+      </div>
+      <a href="donate.html" class="btn btn-primary">Donate to Education</a>
     </div>
-    
-    <a href="donate.html" class="btn btn-primary">Donate Now</a>
+
+    <div class="cause-box">
+      <h2>Food Drive for Families</h2>
+      <p>Support our initiative to provide nutritious meals and grocery kits to families in need during difficult times.</p>
+      <div class="progress mb-3">
+        <div class="progress-bar" style="width: 100%;">₹8,000 / ₹8,000</div>
+      </div>
+      <a href="donate.html" class="btn btn-primary">Donate to Food Relief</a>
+    </div>
+
+    <div class="cause-box">
+      <h2>Medical Aid Assistance</h2>
+      <p>Join us in funding medical treatments, surgeries, and essential supplies for individuals facing urgent health challenges.</p>
+      <div class="progress mb-3">
+        <div class="progress-bar" style="width: 37.5%;">₹4,500 / ₹12,000</div>
+      </div>
+      <a href="donate.html" class="btn btn-primary">Donate to Health Support</a>
+    </div>
+
   </div>
 
 </body>
