--- a/dashboard.html
+++ b/dashboard.html
@@ -58,6 +58,7 @@
     <ul class="list-group">
       <li class="list-group-item">₹500 - School Supplies - 01 Jul 2025</li>
       <li class="list-group-item">₹1000 - Food Drive - 15 Jun 2025</li>
+      <li class="list-group-item">₹700 - Medical Aid - 25 May 2025</li>
     </ul>
   </div>
 
