--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <!-- 📘 Education Support -->
       <div class="col-md-4">
         <div class="card h-100">
-          <img src="https://via.placeholder.com/300x180?text=Education" class="card-img-top" alt="Education">
+          <img src="school.png" class="card-img-top" alt="Education">
           <div class="card-body">
             <h5 class="card-title">Education Support</h5>
             <p class="card-text">Provide school supplies and tuition support to underprivileged children.</p>
