--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <!-- 🍲 Food for Families -->
       <div class="col-md-4">
         <div class="card h-100">
-          <img src="https://via.placeholder.com/300x180?text=Food" class="card-img-top" alt="Food">
+          <img src="food.png" alt="Food">
           <div class="card-body">
             <h5 class="card-title">Food for Families</h5>
             <p class="card-text">Help provide essential groceries and meals to families in crisis.</p>
@@ -108,7 +108,7 @@
       <!-- 💊 Medical Aid -->
       <div class="col-md-4">
         <div class="card h-100">
-          <img src="https://via.placeholder.com/300x180?text=Medical" class="card-img-top" alt="Medical Aid">
+          <img src="hos.png" alt="Medical Aid">
           <div class="card-body">
             <h5 class="card-title">Medical Aid</h5>
             <p class="card-text">Fund urgent healthcare services and medication for patients in need.</p>
